--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-i18next": "^15.1.1",
     "react-router-dom": "^6.28.0",
     "sort-by": "^1.2.0"
