--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^6.28.0",
     "sort-by": "^1.2.0"
   },
