--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "antd": "^5.22.2",
     "axios": "^1.7.7",
     "i18next": "^23.16.5",
@@ -37,6 +38,7 @@
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-range": "^1.10.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "sort-by": "^0.0.2"
   },
