--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-range": "^1.10.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-world-flags": "^1.6.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-world-flags": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react": "^4.3.3",
